# dbus-notifier

./: .gitignore  README.md  __init__.py  main.py  pylintrc  pyproject.toml  requirements.txt  setup.cfg  setup.py
dbus_notifier/: notifysender.py
dbusnotifier/: notifysender.py
