[build-system]
requires = ["setuptools>=67.3.3"]
build-backend = "setuptools.build_meta"

[project]
name = "dbus-notifier"
version = "0.1.1"
authors = [
  { name="Adam Bukolt", email="abukolt@gmx.com" },
]
description = "A small dbus notifier package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/adambmarsh/dbusnotify"